--- a/TolyID/TolyID.csproj
+++ b/TolyID/TolyID.csproj
@@ -75,6 +75,9 @@
 	  <MauiXaml Update="MVVM\Views\Capturas.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="MVVM\Views\PopupCadastro.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
