refactor: tela de cadastro de captura agora é uma TabbedPage

--- a/TolyID/TolyID.csproj
+++ b/TolyID/TolyID.csproj
@@ -85,6 +85,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="MVVM\Views\CadastroCapturaTabbedView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="MVVM\Views\CadastroCapturaView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
