fix: atualização automática de tatus cadastrados, cadastro de microchip feito após cadastro de tatu
anteriormente, para mostrar um novo tatu cadastrado na tela, era preciso atualizar a tela manualmente. Agora, isso é feito automaticamente após o cadastro. A adição do microchip agora é feita após o cadastro do tatu.

--- a/TolyID/TolyID.csproj
+++ b/TolyID/TolyID.csproj
@@ -91,6 +91,9 @@
 	  <MauiXaml Update="MVVM\Views\CapturaView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="MVVM\Views\MicrochipPopup.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="MVVM\Views\TatusCadastradosView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
