feat, ui: exclusao de tatus, edicao de icones

--- a/TolyID/TolyID.csproj
+++ b/TolyID/TolyID.csproj
@@ -59,6 +59,8 @@
 	<ItemGroup>
 	  <None Remove="MVVM\Models\.gitkeep" />
 	  <None Remove="MVVM\ViewModels\.gitkeep" />
+	  <None Remove="Resources\Images\icone_adicionar.svg" />
+	  <None Remove="Resources\Images\icone_editar.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
