refactor: tela de cadastro de captura dividida em 4 arquivos diferentes

--- a/TolyID/TolyID.csproj
+++ b/TolyID/TolyID.csproj
@@ -88,6 +88,18 @@
 	  <MauiXaml Update="MVVM\Views\CadastroCapturaTabbedView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="MVVM\Views\CadastroDeCaptura\AmostrasView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="MVVM\Views\CadastroDeCaptura\BiometriaView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="MVVM\Views\CadastroDeCaptura\DadosGeraisView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="MVVM\Views\CadastroDeCaptura\FichaAnestesicaView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="MVVM\Views\CadastroTatuPopup.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
