--- a/TolyID/TolyID.csproj
+++ b/TolyID/TolyID.csproj
@@ -79,6 +79,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="MVVM\Views\EditarTatuPopup.xaml.cs">
+	    <DependentUpon>EditarTatuPopup.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="MVVM\Views\TatusCadastradosView.xaml.cs">
 	    <DependentUpon>TatusCadastradosView.xaml</DependentUpon>
 	  </Compile>
@@ -106,7 +109,7 @@
 	  <MauiXaml Update="MVVM\Views\CapturaView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="MVVM\Views\MicrochipPopup.xaml">
+	  <MauiXaml Update="MVVM\Views\EditarTatuPopup.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="MVVM\Views\TatusCadastradosView.xaml">
