--- a/TolyID/TolyID.csproj
+++ b/TolyID/TolyID.csproj
@@ -57,6 +57,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Services\Api\BaseApiConfiguration.cs" />
+	  <Compile Remove="Services\Api\CadastrarTatuApi.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Remove="MVVM\Models\.gitkeep" />
 	  <None Remove="MVVM\ViewModels\.gitkeep" />
 	  <None Remove="Resources\Images\icone_adicionar.svg" />
