--- a/TolyID/TolyID.csproj
+++ b/TolyID/TolyID.csproj
@@ -67,6 +67,8 @@
 	  <None Remove="Resources\Images\icone_adicionar.svg" />
 	  <None Remove="Resources\Images\icone_editar.svg" />
 	  <None Remove="Resources\Images\icone_sair.svg" />
+	  <None Remove="Resources\Images\icone_seta_baixo.svg" />
+	  <None Remove="Resources\Images\icone_seta_cima.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -137,5 +139,13 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
+
+	<PropertyGroup Condition="$(TargetFramework.Contains('-android')) and '$(Configuration)' == 'Release'">
+		<AndroidKeyStore>True</AndroidKeyStore>
+		<AndroidSigningKeyStore>key.keystore</AndroidSigningKeyStore>
+		<AndroidSigningStorePass>123456</AndroidSigningStorePass>
+		<AndroidSigningKeyAlias>TolyIdAlias</AndroidSigningKeyAlias>
+		<AndroidSigningKeyPass>123456</AndroidSigningKeyPass>
+	</PropertyGroup>
 
 </Project>
